plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.14'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.kidmily'
version = '0.0.1-SNAPSHOT'
description = 'algoga_server'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.16'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.apache.pdfbox:pdfbox:3.0.3'  // pdf 생성
    implementation 'org.apache.poi:poi-ooxml:5.2.3'

    // 메일 전송을 위한 의존성
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // JWT를 생성, 파싱, 검증하는 데 필요한 인터페이스, 추상 클래스, 예외 클래스, 데이터 모델(예: Claims, JwsHeader 등)이 포함
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    // jjwt-api에서 정의된 인터페이스들의 구체적인 구현체를 제공하는 모듈
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    // JWT의 페이로드(payload)와 헤더(header)를 JSON 형식으로 직렬화(serialization)하거나 역직렬화(deserialization)하는 데 필요한 Jackson 라이브러리 연동을 제공하는 모듈
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
    // PDF 생성
    implementation 'com.itextpdf:itext-core:8.0.5'
    implementation 'software.amazon.awssdk:s3:2.25.11'
// 이메일
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Redis 의존성 추가
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // 1. Spring AI 모듈 버전 관리를 위한 BOM 추가
    implementation platform('org.springframework.ai:spring-ai-bom:1.1.7')

    // 2. Ollama와 연동하기 위한 Spring AI Starter 의존성 추가
    implementation 'org.springframework.ai:spring-ai-starter-model-ollama'

    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testCompileOnly 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testAnnotationProcessor 'org.projectlombok:lombok'
    // MapStruct 추가
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
    implementation 'com.bucket4j:bucket4j-core:8.10.1'
    implementation 'org.springframework.boot:spring-boot-starter-aop' // 서킷 브레이커 어노테이션 처리에 필요
    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
    implementation 'com.bucket4j:bucket4j-redis:8.10.1'
}

tasks.named('test') {
    useJUnitPlatform()
}
